<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    tools:context=".activity.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login_welcome"
            android:textColor="@color/color_text_normal"
            android:textSize="28sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_login_welcome"
            android:textColor="@color/color_text_light"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_login_username"
            android:textColor="@color/color_text_dark"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="11"
            android:inputType="numberDecimal"
            android:imeActionLabel="下一个"
            android:imeOptions="actionNext"
            tools:ignore="Autofill,LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_login_password"
            android:textColor="@color/color_text_dark"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeActionLabel="登录"
            android:imeOptions="actionDone"
            tools:ignore="Autofill,LabelFor" />
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/login_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/text_login_action"
                android:textColor="@color/colorAccent"
                android:textSize="26sp" />
            <ProgressBar
                android:id="@+id/login_doing"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:indeterminateTintMode="src_atop"
                android:layout_gravity="center" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/text_login_statement"
                android:textColor="@color/color_text_dark"
                android:textSize="12sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/text_login_change_way"
                    android:textColor="@color/color_text_dark"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/login_in_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/text_login_in_web"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
        <ImageView
            android:id="@+id/login_banner_left"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:scaleType="fitStart"
            android:src="@drawable/pic_login_banner_left_show"
            tools:ignore="ContentDescription" />
        <ImageView
            android:id="@+id/login_banner_right"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:src="@drawable/pic_login_banner_right_show"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>